# temp

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  antora-playbook.yml  docker-compose-dev.yml  pyproject.toml
docker/: Dockerfile
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: glossary.adoc  index.adoc
src/edm/: settings.py
src/edm/adapters/package_gateway/: in_memory_package_gateway.py
src/edm/domain/: errors.py  events.py
src/edm/domain/entities/: base.py  document.py  file.py  package.py
src/edm/domain/value_objects/: __init__.py  counterparty.py  fail_status.py  package_status.py  snp.py
src/edm/infrastructure/file_storages/: factories.py  in_memory_file_storage.py
src/edm/infrastructure/repositories/: factories.py  in_memory_outboxed_event_repository.py  in_memory_package_repository.py
src/edm/infrastructure/uow/: factories.py  in_memory_outboxed_package_uow.py  in_memory_package_uow.py
src/edm/presentation/: dependencies.py
src/edm/presentation/api/: dependencies.py  main.py  settings.py
src/edm/service/: di.py  errors.py  events.py  mapping.py
tests/: conftest.py
tests/integration/test_service/: conftest.py
tests/mock/: mock_dependencies.py  mock_di.py
tests/mock/file_storages/: mock_factories.py  mock_in_memory_file_storage.py
tests/mock/repositories/: mock_factories.py  mock_in_memory_outboxed_event_repository.py  mock_in_memory_package_repository.py
tests/mock/uow/: mock_factories.py  mock_in_memory_outboxed_package_uow.py  mock_in_memory_package_uow.py
(+61 files in other folders)
